fixing when collapsing and expanding sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,14 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.max-w-24 {
+	max-width: 6rem;
+}
+
+.ml-28 {
+	margin-left: 7rem;
+}
+
 .sidenav-menu:dark {
 	@apply text-white opacity-80;
 }
@@ -65,6 +73,12 @@ header {
 @media (min-width: 240px) {
 	header {
 		padding: 0 1rem !important;
+	}
+}
+
+@media (max-width: 1024px) {
+	.mleft-0 {
+		margin-left: 0;
 	}
 }
 
